refac(front): #3479.2 add cards to resources
Former-commit-id: ac2a33f3b93ca2464b524c744d10b014456fbd93

--- a/new/theme/2020/templates/resources/resources.html
+++ b/new/theme/2020/templates/resources/resources.html
@@ -50,12 +50,12 @@
       <h2 class="f2 lh-solid c-fluid-bk">
         Rules is a set of security requirements
       </h2>
-      <p class="fw1 f4 c-fluid-bk">
+      <p class="fw3 f4 c-fluid-bk">
         It allows you to parametrize a pentest according to your organization's
         risk appetite
       </p>
       <a href="{{ SITEURL }}/products/rules/">
-        <button class="bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Go to Rules</button>
+        <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Go to Rules</button>
       </a>
     </div>
   </div>
@@ -70,16 +70,206 @@
         Asserts is an open-source tool that look for deterministic and
         peripheral vulnerabilities
       </h2>
-      <p class="fw1 f4 c-fluid-bk">
+      <p class="fw3 f4 c-fluid-bk">
         That automates attacks to verify the status of vulnerabilities on your system
       </p>
       <a href="{{ SITEURL }}/asserts/">
         <button
-          class="bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
+          class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
           Go to Asserts
         </button>
       </a>
     </div>
   </div>
+</div>
+<div class="roboto flex-ns flex-wrap-ns justify-between-m mw9 pv4-l pv3 bg-graylight">
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card1.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        Develop fast, in a Secure way!
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        How to Develop Products With Speed Without Sacrificing Security?
+        <br>
+        <br>
+      </p>
+      <div class="pv4">
+        <a href="https://www.youtube.com/watch?v=tGNbQelMrFA">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card2.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        Annual Report 2020, San Francisco
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        Seguridad para los usuarios o Time Market. Acceda a contenido gratuito
+        online desde cualquier ubicacion
+      </p>
+      <div class="pv4">
+        <a href="https://report2020.fluidattacks.com/">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card1.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        Please, Stop the Launch Right Now!
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        20 minutes of powerful webinar.
+        <br>
+        <br>
+        <br>
+      </p>
+      <div class="pv4">
+        <a href="https://www.youtube.com/watch?v=N6nVIOsnaOA">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card4.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        See How Drills Can Improve your Business
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        <br>
+        <br>
+        <br>
+      </p>
+      <div class="pv4">
+        <a href="https://fluidattacks.docsend.com/view/dwz4jbxryn54k4mc">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card3.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        When is a security test successful?
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        In this webinar  you will learn elements that will help you make better
+        cybersecurity decisions.
+      </p>
+      <div class="pv4">
+        <a href="https://www.youtube.com/watch?v=zUJ_kU79j7E">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card5.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        Don't Crash Going Too Fast: Hacking Experts
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        Security testing at the speed of your buisines. Technology and security
+        should be change enablers.
+      </p>
+      <div class="pv4">
+        <a href="https://usa.fluidattacks.com/ebook/">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card6.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        Control the Process to Achieve Remediation
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        Through Integrates, an internal or external security team comunicates
+        all security risks identified.
+      </p>
+      <div class="pv4">
+        <a href="https://fluidattacks.docsend.com/view/ymup7742z3wkkzex">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card7.png"
+    alt="Webinar cover ESP"
+    class="br3 br--top">
+    <div class="ph4 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+        Meet the Power of Forces
+        <br>
+        <br>
+      </h1>
+      <p class="c-fluid-bk fw3 f5 mv0">
+        Forces can be included as part of a continuous integration pipeline.
+        Download this resource.
+      </p>
+      <div class="pv4">
+        <a href="https://fluidattacks.docsend.com/view/utsh7u7hdef453fw">
+          <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div
+  class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+  <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card8.png"
+  alt="Webinar cover ESP"
+  class="br3 br--top">
+  <div class="ph4 mh1">
+    <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      What Data Tells Us About Continuous Hacking?
+      <br>
+    </h1>
+    <p class="c-fluid-bk fw3 f5 mv0">
+      <br>
+      <br>
+      <br>
+    </p>
+    <div class="pv4">
+      <a href="https://www.youtube.com/watch?v=VWwqhA2LFHg">
+        <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
+      </a>
+    </div>
+  </div>
+</div>
 </div>
 {% endblock content %}
