--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -195,6 +195,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .f-error { font-size: 10rem; }
 .mw-14 { max-width: 14rem; }
 .display-none { display: none; }
+.w-card { width: 350px; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1200px) {
