fix(front): #3479.3 center cards container
- This change looks bigger than it is,
I just added an outer div, but indentation things


Former-commit-id: d35e2cf39670d5a65d94d6b85e61ed9fb5abac25

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -196,6 +196,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .mw-14 { max-width: 14rem; }
 .display-none { display: none; }
 .w-card { width: 350px; }
+.mw-1200 { max-width: 1200px; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1200px) {
