refac(front): #3529.1 resources titles and texts
- I made a temporary adjustment to the texts on Resources.


Former-commit-id: c462526ec1558e227200c8fdad348fa8309320d1

--- a/new/theme/2020/templates/resources/resources.html
+++ b/new/theme/2020/templates/resources/resources.html
@@ -91,10 +91,10 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          Develop fast, in a Secure way!
+          Developing Fast and Preserving Security!
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          How to Develop Products With Speed Without Sacrificing Security?
+          How to Develop Products With Speed Without Sacrificing Security? (Spanish)
           <br>
           <br>
         </p>
@@ -112,11 +112,11 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          Annual Report 2020, San Francisco
+          State of Attacks, Annual Report 2020
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          Seguridad para los usuarios o Time Market. Acceda a contenido gratuito
-          online desde cualquier ubicacion
+          Discover ideas on practices you can adopt
+          to protect your company against attacks.
         </p>
         <div class="pv4">
           <a href="https://report2020.fluidattacks.com/">
@@ -132,10 +132,10 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          Please, Stop the Launch Right Now!
+          Please, Stop the Launch!
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          20 minutes of powerful webinar.
+          Security for Users or Time-To-Market? (Spanish)
           <br>
           <br>
           <br>
@@ -154,10 +154,10 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          See How Drills Can Improve your Business
+          Drills DataSheet 2020
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          <br>
+          Take a look at the key features and benefits of Drills here.
           <br>
           <br>
         </p>
@@ -175,11 +175,10 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          When is a security test successful?
+          Successful Security Tests
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          In this webinar  you will learn elements that will help you make better
-          cybersecurity decisions.
+          When Is a Security Test Successful? (Spanish)
         </p>
         <div class="pv4">
           <a href="https://www.youtube.com/watch?v=zUJ_kU79j7E">
@@ -195,11 +194,10 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          Don't Crash Going Too Fast: Hacking Experts
+          Hacking With Speed and Precision
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          Security testing at the speed of your buisines. Technology and security
-          should be change enablers.
+          eBook: Don't Crash Going Too Fast (2020).
         </p>
         <div class="pv4">
           <a href="https://usa.fluidattacks.com/ebook/">
@@ -215,11 +213,10 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          Control the Process to Achieve Remediation
+          Integrates DataSheet 2020
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          Through Integrates, an internal or external security team comunicates
-          all security risks identified.
+          Take a look at the key features and benefits of Integrates here.
         </p>
         <div class="pv4">
           <a href="https://fluidattacks.docsend.com/view/ymup7742z3wkkzex">
@@ -235,13 +232,12 @@
       class="br3 br--top">
       <div class="ph4 mh1">
         <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-          Meet the Power of Forces
+          Forces DataSheet 2020
           <br>
           <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
-          Forces can be included as part of a continuous integration pipeline.
-          Download this resource.
+          Take a look at the key features and benefits of Forces here.
         </p>
         <div class="pv4">
           <a href="https://fluidattacks.docsend.com/view/utsh7u7hdef453fw">
@@ -257,11 +253,11 @@
     class="br3 br--top">
     <div class="ph4 mh1">
       <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
-        What Data Tells Us About Continuous Hacking?
+        Continuous Hacking and Vulnerability Remediation
         <br>
       </h1>
       <p class="c-fluid-bk fw3 f5 mv0">
-        <br>
+        What Data Tells Us About Continuous Hacking?
         <br>
         <br>
       </p>
