--- a/front/src/components/Badge/index.css
+++ b/front/src/components/Badge/index.css
@@ -1,15 +1,16 @@
 :local .badge {
   position: absolute;
-  background-color: #ff3435;
+  background-color: #ff3435 !important;
   margin-left: 0.5rem;
+  margin-right: 0.1rem;
 }
 
 :local .sm {
-    font-size: 0.9rem;
+    font-size: 0.9rem !important;
 }
 
 :local .md {
-    font-size: 1.1rem;
+    font-size: 1.1rem !important;
 }
 
 @media (min-width: 768px) {
@@ -17,6 +18,7 @@
     top: 0;
     right: 0;
     margin-left: 0;
+    margin-right: 0;
   }
 }
 
