--- a/new/theme/2020/templates/resources/resources.html
+++ b/new/theme/2020/templates/resources/resources.html
@@ -83,22 +83,53 @@
   </div>
 </div>
 <div class="bg-graylight">
+  <ul class="list ph0-ns ph3 ma0 tc pv3">
+    <li class="pr2 di">
+      <input type="radio" id="op7" class="dn" name="menu4" checked />
+      <label class="all-tag c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op7">
+        All
+      </label>
+    </li>
+    <li class="ph2 di">
+      <input type="radio" id="op8" class="dn transparent" name="menu4"/>
+      <label class="ebook-tag c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op8">
+        eBook
+      </label>
+    </li>
+    <li class="ph2 di">
+      <input type="radio" id="op9" class="dn transparent" name="menu4"/>
+      <label class="report-tag c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op9">
+        Report
+      </label>
+    </li>
+    <li class="ph2 di">
+      <input type="radio" id="op10" class="dn transparent" name="menu4"/>
+      <label class="webinar-tag c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op10">
+        Webinar
+      </label>
+    </li>
+    <li class="ph2 di">
+      <input type="radio" id="op11" class="dn transparent" name="menu4"/>
+      <label class="datasheet-tag c-fluid-gray f4-ns f5 roboto no-underline fw3 hv-fluid-dkred pointer" for="op11">
+        DataSheet
+      </label>
+    </li>
+  </ul>
   <div class="roboto flex-ns flex-wrap-ns justify-between-m mw-1200 pv4-l pv3 bg-graylight ml-auto mr-auto">
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card1.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Developing Fast and Preserving Security!
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           How to Develop Products With Speed Without Sacrificing Security? (Spanish)
           <br>
-          <br>
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://www.youtube.com/watch?v=tGNbQelMrFA">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
           </a>
@@ -106,19 +137,19 @@
       </div>
     </div>
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="report fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card2.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           State of Attacks, Annual Report 2020
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           Discover ideas on practices you can adopt
           to protect your company against attacks.
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://report2020.fluidattacks.com/">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
           </a>
@@ -126,21 +157,21 @@
       </div>
     </div>
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card1.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Please, Stop the Launch!
+          <br>
+          <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           Security for Users or Time-To-Market? (Spanish)
           <br>
-          <br>
-          <br>
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://www.youtube.com/watch?v=N6nVIOsnaOA">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
           </a>
@@ -148,20 +179,21 @@
       </div>
     </div>
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="datasheet fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card4.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Drills DataSheet 2020
+          <br>
+          <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           Take a look at the key features and benefits of Drills here.
           <br>
-          <br>
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://fluidattacks.docsend.com/view/dwz4jbxryn54k4mc">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
           </a>
@@ -169,18 +201,21 @@
       </div>
     </div>
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card3.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Successful Security Tests
+          <br>
+          <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           When Is a Security Test Successful? (Spanish)
+          <br>
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://www.youtube.com/watch?v=zUJ_kU79j7E">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
           </a>
@@ -188,18 +223,20 @@
       </div>
     </div>
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="ebook fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card5.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Hacking With Speed and Precision
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           eBook: Don't Crash Going Too Fast (2020).
+          <br>
+          <br>
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://usa.fluidattacks.com/ebook/">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
           </a>
@@ -207,18 +244,21 @@
       </div>
     </div>
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="datasheet fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card6.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Integrates DataSheet 2020
+          <br>
+          <br>
         </h1>
         <p class="c-fluid-bk fw3 f5 mv0">
           Take a look at the key features and benefits of Integrates here.
+          <br>
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://fluidattacks.docsend.com/view/ymup7742z3wkkzex">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
           </a>
@@ -226,12 +266,12 @@
       </div>
     </div>
     <div
-      class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+      class="datasheet fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
       <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card7.png"
       alt="Webinar cover ESP"
       class="br3 br--top">
-      <div class="ph4 mh1">
-        <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+      <div class="ph3 mh1">
+        <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
           Forces DataSheet 2020
           <br>
           <br>
@@ -239,7 +279,7 @@
         <p class="c-fluid-bk fw3 f5 mv0">
           Take a look at the key features and benefits of Forces here.
         </p>
-        <div class="pv4">
+        <div class="pv4 tc">
           <a href="https://fluidattacks.docsend.com/view/utsh7u7hdef453fw">
             <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Download Now</button>
           </a>
@@ -247,21 +287,20 @@
       </div>
     </div>
     <div
-    class="br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
+    class="webinar fadein br3 shadowbox-blog hover-card mb5 relative dt-ns mt0-ns ma-auto bg-white w-card">
     <img loading="lazy" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/resources/card8.png"
     alt="Webinar cover ESP"
     class="br3 br--top">
-    <div class="ph4 mh1">
-      <h1 class="c-fluid-bk mb0 f3 fw8 tl lh2 pb3">
+    <div class="ph3 mh1">
+      <h1 class="c-fluid-bk mb0 f3 fw8 tc lh2 pb3">
         Continuous Hacking and Vulnerability Remediation
         <br>
       </h1>
       <p class="c-fluid-bk fw3 f5 mv0">
         What Data Tells Us About Continuous Hacking?
         <br>
-        <br>
       </p>
-      <div class="pv4">
+      <div class="pv4 tc">
         <a href="https://www.youtube.com/watch?v=VWwqhA2LFHg">
           <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">Watch Webinar</button>
         </a>
