refac(front): #3525 blog index
- Adjusted the width of the container of the blog cards
- Adjusted the width for each card
- Reduced the blank space in each card
- Added banner for the blog


Former-commit-id: 013831fe1366c178d07e73945eb643b26a0c25ab

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -130,6 +130,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .careers-main-bg { background-image: url('../../images/careers/hero-main-1.png'); }
 .resources-bg { background-image: url('../../images/resources/resources-main.png'); }
 .error-bg { background-image: url('../../images/bg-error.png');}
+.blog-bg { background-image: url('../../images/blog-banner.png');}
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
 .lower-img { &:hover { transform: scale(1.1);
@@ -197,6 +198,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .display-none { display: none; }
 .w-card { width: 350px; }
 .mw-1200 { max-width: 1200px; }
+.h30-em { height: 30em; }
 
 // Tachyons custom responsive classes
 @media screen and (min-width: 960px) and (max-width: 1200px) {
