refac(cross): #3521 new style for people page
- Removed table in people page
- Added colage of images
- Added button to contact page
- Added banner


Former-commit-id: b83ad629884527d169e967be60b8605d180f2160

--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -131,6 +131,7 @@ $codeyellow: rgba(230, 219, 116, 1);
 .resources-bg { background-image: url('../../images/resources/resources-main.png'); }
 .error-bg { background-image: url('../../images/bg-error.png');}
 .blog-bg { background-image: url('../../images/blog-banner.png');}
+.people-bg { background-image: url('../../images/people/people-cover.png'); }
 .b-max { font-weight: 999; }
 .nb-6 { margin-bottom: -6rem;}
 .lower-img { &:hover { transform: scale(1.1);
@@ -466,11 +467,8 @@ $codeyellow: rgba(230, 219, 116, 1);
 
 
 .tb-ppl {
-  margin-left: auto;
-  margin-right: auto;
-  white-space: nowrap;
-  tbody tr {
-    text-align: center;
+  img {
+    padding: 0;
   }
 }
 
