--- a/new/theme/2020/templates/page.html
+++ b/new/theme/2020/templates/page.html
@@ -221,27 +221,40 @@
 
 {% block header %}
 {% if page.banner %}
-<div class="bg-graylight">
-  <div
-    class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-banner ml-auto mr-auto">
-    <div class="w-100 center">
-      <h2 class="white fw6 f1-l f2 roboto tc ma0">
-        {{ page.subtitle }}
-      </h2>
-      {% if page.subtext %}
-      <h2 class="white f3-l f4 fw3 roboto tc ma0">
-        {{ page.subtext }}
-      </h2>
-      {% endif %}
+  {% if page.slug == "careers/" %}
+  <div class="bg-graylight">
+    <div
+      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-banner ml-auto mr-auto">
+      <div class="w-100 center">
+        <h2 class="white fw6 f1-l f2 roboto tc ma0">
+          {{ page.subtitle }}
+        </h2>
+        {% if page.subtext %}
+        <h2 class="white f3-l f4 fw3 roboto tc ma0">
+          {{ page.subtext }}
+        </h2>
+        {% endif %}
+      </div>
     </div>
   </div>
-</div>
+  {% else %}
+  <div class="bg-graylight">
+    <div
+      class="{{ page.banner }} coverm cover-s banner-height justify-center items-center flex bg-center mw-banner ml-auto mr-auto">
+      <div class="w-100 center">
+        <h2 class="white fw6 f1-l f2 roboto tc ma0">
+          {{ page.title }}
+        </h2>
+      </div>
+    </div>
+  </div>
+  {% endif %}
 {% endif %}
 {% endblock header %}
 {% block content %}
 <div class="bg-graylight">
   <div class="roboto internal mw-banner ml-auto mr-auto roboto bg-white ph4-l ph3 pt5-l pt4 pb5">
-    <h1 class="roboto tc">{{ page.title }}</h1>
+    <h1 class="roboto tc">{% if page.title == "People" %}{{ page.subtitle }}{% else %}{{ page.title }}{% endif %}</h1>
     <div class="lh-2 tl">
       {{ page.content }}
       {% if page.faqindex %}
