--- a/new/theme/2020/templates/findings.html
+++ b/new/theme/2020/templates/findings.html
@@ -142,7 +142,7 @@
       <img loading="lazy" class="dn" src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/images/arrow.svg"
            alt="Fluid Arrow">
     </div>
-    {% set categorder = ["credentials", "authentication", "authorization", "session", "legal", "privacy", "data", "source", "system", "files", "logs", "emails", "services", "certificates", "cryptography", "architecture", "networks", "virtualization", "mobile", "social"] %}
+    {% set categorder = ["credentials", "authentication", "authorization", "session", "legal", "privacy", "data", "source", "system", "files", "logs", "emails", "services", "certificates", "cryptography", "architecture", "networks", "virtualization", "devices", "social"] %}
     {% for categ in categorder %}
       <div class="rulescat hover-bg-light-gray flex">
         <h3 class="w-90">{{ categ |replace('-', ' ') | capitalize }}</h3>
