refac(front): #3535 add button in forces
- Added butotn to installation guide for forces


Former-commit-id: ce1dfbc804e61a00a689af8ce108a5887b82e9c3

--- a/new/theme/2020/templates/products/forces.html
+++ b/new/theme/2020/templates/products/forces.html
@@ -71,12 +71,18 @@
     Application Security Testing (DAST - SAST) and dynamic testing of many
     protocols (DXST).
   </p>
-  <div class="tc pt4">
-    <a class="roboto fw1 f5 no-underline c-fluid-bk hv-fluid-dkred"
-       href="{{ SITEURL }}/contact-us/">
-      <span class="br2 bannerbt hv-bt-fluid-rd bt-pd contact-pd bt-trans white b roboto pointer mt2">
+  <div class="tc pt4 dib ph2">
+    <a href="{{ SITEURL }}/products/forces/install/">
+      <button class="outline-transparent pointer c-dkred bg-white bc-fluid-red ba hv-fluid-rd pv2 ph4 roboto fw7 f5 bt-trans br2 bc-fluid-red ba">
+          Check Installation Guide
+      </button>
+    </a>
+  </div>
+  <div class="tc pt4 dib ph2">
+    <a href="{{ SITEURL }}/contact-us/">
+      <button class="outline-transparent bannerbt hv-bt-fluid-rd pointer white pv2 ph4 roboto fw7 f5 dib bt-trans br2 bc-fluid-red ba">
           Get a Quote
-      </span>
+      </button>
     </a>
   </div>
 </div>
