--- a/new/theme/2020/templates/products/forces.html
+++ b/new/theme/2020/templates/products/forces.html
@@ -145,6 +145,7 @@
   </div>
   <div class="w-100 roboto tc pv6">
     <h1 class="c-lightblack b f2 roboto tc ma0">
+      Key Features
     </h1>
     {{ page.content }}
     </div>
