--- a/new/theme/2020/static/scss/base.scss
+++ b/new/theme/2020/static/scss/base.scss
@@ -243,6 +243,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .banner-height { height: 12.5rem; }
   .h-search-icon { height: 1.125rem; }
   .w-menu-bt { width: 18px; }
+  .dn-s { display: none; }
 }
 //medium resolutions
 @media screen and (min-width: 30em) and (max-width: 60em) {
@@ -257,6 +258,7 @@ $codeyellow: rgba(230, 219, 116, 1);
   .coverm { background-size: cover; }
   .w-products { width: 20rem; }
   .w-menu-bt { width: 18px; }
+  .dn-s { display: none; }
 }
 
 //Large screens
