fix(front): #3536 remove by word in blog footer
Former-commit-id: ec86b55fc5df10f90ff06c233ddf908fbc098809

--- a/new/theme/2020/templates/article.html
+++ b/new/theme/2020/templates/article.html
@@ -103,7 +103,7 @@
             alt="Author picture">
       <div class="dib-l tl v-top ph3-l pv4-l">
           <!-- Author -->
-          <p class="c-fluid-bk fw4 f-key-features dib-l v-mid mr4-l pv0-l pv3">By
+          <p class="c-fluid-bk fw4 f-key-features dib-l v-mid mr4-l pv0-l pv3">
             {% for author in article.authors %}
               <a class="c-fluid-bk no-underline"
                   href="{{ SITEURL }}/{{ author.url }}">
